# carla-evidence

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  carla-evidence-architecture.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/issues_drafts/: 001-cautious-bold-v0.2.1.md  002-dsmt-hyperpowerset.md  003-literature-cross-validation.md  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_combination.py
docs/: Makefile  RELEASING.md
docs/rfcs/: 001-cautious-bold.md  README.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/concepts/: combination_rules.md  index.rst  mass_functions.md
docs/source/how_to/: index.rst
docs/source/theory_refs/: index.rst
docs/source/tutorials/: index.rst
examples/: 01_mass_functions.ipynb  02_zadeh_paradox.ipynb
src/carla_evidence/: __init__.py
src/carla_evidence/benchmarks/: __init__.py
src/carla_evidence/carla/: __init__.py
src/carla_evidence/carla/scenarios/: __init__.py
src/carla_evidence/combination/: __init__.py  _dense_kernel.py  _sparse_kernel.py  base.py  conjunctive.py  dempster.py  disjunctive.py  dubois_prade.py  mean.py  pcr5.py  pcr6.py  yager.py
src/carla_evidence/construction/: __init__.py
src/carla_evidence/core/: __init__.py  encoding.py  exceptions.py  frame.py  mass.py  powerset.py
src/carla_evidence/decision/: __init__.py
src/carla_evidence/discounting/: __init__.py
src/carla_evidence/metrics/: __init__.py
src/carla_evidence/opencda/: __init__.py
src/carla_evidence/ros/: __init__.py
src/carla_evidence/ros/msgs/: __init__.py
src/carla_evidence/testing/: __init__.py  strategies.py
src/carla_evidence/viz/: __init__.py
tests/: conftest.py
tests/_references/: __init__.py  dense_combination.py
tests/fixtures/: __init__.py  canonical_bbas.py  small_frames.py
tests/property/: test_combination_props.py  test_mass_props.py
tests/regression/: test_shafer1976.py  test_zadeh1986.py
tests/unit/: test_combination_base.py  test_combination_rules.py  test_encoding.py  test_frame.py  test_mass.py  test_powerset.py  test_smoke.py
